# cmux-handoff-relay

./: .cmux-handoff.example.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  apm.yml  pyproject.toml
.apm/instructions/: existing-agent-rules.instructions.md
.cursor/rules/: cmux-handoff-relay.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: SESSION-HANDOFF.md  maintainer-workflows.md  release-checklist.md  safety.md  workflow.md
examples/: cmux-handoff.json  handoff-blocks.txt
src/cmux_handoff_relay/: __init__.py  cli.py  cmux.py  config.py  errors.py  parser.py
tests/: test_cli_dry_run.py  test_cli_subcommands.py  test_cli_watch.py  test_cmux_detection.py  test_config.py  test_parser.py
